--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,5 +1,8 @@
 @import url("https://fonts.googleapis.com/css2?family=Outfit:wght@400;700&display=swap");
 
+/* styles/globals.css */
+@import url("/my-studies/_next/static/css/styles.chunk.css");
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
