--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,4 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Outfit:wght@400;700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Outfit:wght@400;700&display=swap");
 
 /* styles/globals.css */
 @import url("/my-studies/_next/static/css/styles.chunk.css");
@@ -7,9 +8,15 @@
 @tailwind components;
 @tailwind utilities;
 
-@layer base {
+components {
   body {
     font-family: "Outfit", sans-serif;
     background-color: lightGray;
   }
 }
+/* 
+@layer components {
+  body {
+    font-family: "Kumbh Sans", sans-serif;
+  }
+} */
